clap_derive/tests/ui/clap_derive_empty_attr.stderr
error: expected parentheses after `clap`
  --> $DIR/clap_derive_empty_attr.rs:14:7
   |
14 |     #[clap]
   |       ^^^^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/clap_derive_empty_attr.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`
